kubernetes/apps/nexus/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: nexus
          image: klo2k/nexus3:3.68.1-02
          resources:
            limits:
              memory: "3Gi"
              cpu: "500m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          hostPath:
            path: /mnt/nfs/AppData/nexus
            type: Directory
