kubernetes/apps/nexus/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /
    prometheus.io/port:   '8081'
spec:
  selector:
    app: nexus
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32000
