kubernetes/apps/nexus/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: "nexus.cluster.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nexus
                port:
                  number: 32000
    - host: "nexus.cluster.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nexus
                port:
                  number: 32000
